--- a/MRM/Views/Shared/_Layout.cshtml
+++ b/MRM/Views/Shared/_Layout.cshtml
@@ -5,7 +5,10 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - MRM Campaign</title>
-    <script src="~/Scripts/jquery-2.1.3.min.js"></script>
+    
+    <script type="text/javascript" src="http://code.jquery.com/jquery-1.9.1.js"></script>
+    <script type="text/javascript" src="http://code.jquery.com/ui/1.10.1/jquery-ui.js"></script>
+    
     <link href="~/Content/datepicker3.css" rel="stylesheet"/>
     <script src="~/Content/bootstrap-datepicker.js"></script>
     @Styles.Render("~/Content/css")
@@ -14,6 +17,12 @@
     <link href="~/Content/Multi-Select/docsupport/prism.css" rel="stylesheet"/>
     <link href="~/Content/Multi-Select/chosen.css" rel="stylesheet"/>
     <link href="~/Content/MasterStyle.css" rel="stylesheet"/>
+    
+    <link href="~/Content/jquery-ui-1.12.1/jquery-ui-1.12.1/jquery-ui.min.css" rel="stylesheet" />
+    
+    @*<script src="~/Scripts/jquery-2.1.3.min.js"></script>
+    <script src="~/Content/jquery-ui-1.12.1/jquery-ui-1.12.1/jquery-ui.min.js"></script>*@
+   
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
@@ -24,10 +33,9 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <h1 style="color:#fff">@Html.ActionLink("MRM", "Index", "MasterCampaign", new { @style= "color:#fff; text-decoration:none" })</h1>
+                <h1 style="color:#fff"><a href="/MasterCampaign/Index" style="color:#fff; text-decoration:none" >MRM</a></h1>
             </div>
             <div class="navbar-collapse collapse">
-              
                 @Html.Partial("_LoginPartial")
             </div>
         </div>
@@ -50,12 +58,13 @@
 </html>
 <script src="~/Content/Multi-Select/chosen.jquery.js" type="text/javascript"></script>
 <script src="~/Content/Multi-Select/docsupport/init.js"></script>
-<link href="~/Content/jquery-ui.css" rel="stylesheet" />
-<script src="~/Content/jquery-ui.min.js"></script>
+
+
 <script>
+    
     $(document).ajaxStart(function() {
-        
-        $("<div id='globalLoader' class='loader'>Loading...!</div>").dialog().show();
+        $("<div id='globalLoader' style='width: 200px; height: 400px;'><div class='loader'></div></div>").dialog({ height: 400, width: 400, modal: true,  dialogClass: 'dialogbg' }).show();
+        $(".ui-dialog-titlebar").hide();
     });
 
     $(document).ajaxComplete(function() {
@@ -67,7 +76,7 @@
             '.chosen-select-rtl': { rtl: true },
             '.chosen-select-width': { width: '95%' }
         }
-        for (var selector in config) {
+        for(var selector in config) {
             $(selector).chosen(config[selector]);
         }
 
@@ -75,21 +84,56 @@
         $('#globalLoader').remove();
     });
 
-    $(document).ready(function() {
+    $(document).ready(function () {
         commonUiInitialization();
     });
 
-    
+
+    var manageStartEndDate = function () {
+        var sDate = new Date($('#StartDate').val());
+        var dDate = new Date($('#EndDate').val());
+        if (sDate>dDate) {
+            $("#EndDate").val("");
+        }
+
+        if ($('#StartDate').val() === "") {
+            $("#EndDate").datepicker().attr('readonly', 'readonly');
+            $("#EndDate").datepicker('remove');
+            $("#EndDate").val("");
+        } else {
+            $("#EndDate").datepicker().removeAttr('readonly');
+            $("#EndDate").datepicker('remove');
+            $("#EndDate").datepicker({
+                format: 'mm/dd/yyyy',
+                startDate: new Date($('#StartDate').val()),
+                formatDate: 'mm/dd/yyyy'
+            });
+        }
+    };
+
 
     var commonUiInitialization = function () {
-        $('.mrm-cal').each(function () { if ($(this).val() === '06/26/2017') { $(this).val(''); } });
+        
         $('.chosen-single').chosen();
         $('.mrm-cal').datepicker({
             format: 'mm/dd/yyyy'
         });
+        $('.mrm-cal').each(function () { if ($(this).val().indexOf('1/1/0001') >= 0) { $(this).val(''); } });
+
+        manageStartEndDate();
+
+        $(document).on('change', '#StartDate', function () {
+            manageStartEndDate();
+        });
     };
 </script>
 <style>
+    /*.ui-widget-content{border:0px solid #fff !important}*/
+     .dialogbg {
+         background: transparent;
+         border: 0px solid #fff !important;
+         border-style: none;
+     }
     .loader {
         border: 16px solid #f3f3f3;
         border-radius: 50%;
@@ -101,12 +145,12 @@
     }
 
     @@-webkit-keyframes spin {
-    0% { -webkit-transform: rotate(0deg); }
-    100% { -webkit-transform: rotate(360deg); }
+        0% { -webkit-transform: rotate(0deg); }
+        100% { -webkit-transform: rotate(360deg); }
     }
 
     @@keyframes spin {
-    0% { transform: rotate(0deg); }
-    100% { transform: rotate(360deg); }
+        0% { transform: rotate(0deg); }
+        100% { transform: rotate(360deg); }
     }
-    </style>
+</style>
