--- a/MRM/Views/ChildList/ChildList.cshtml
+++ b/MRM/Views/ChildList/ChildList.cshtml
@@ -83,24 +83,28 @@
                 </div>
                 <div class="row" style="padding-top:10px">
                     <div class="col-md-11">
-                        <table cellpadding="0" cellspacing="0">
-                            <tr>
-                                @for (int i = 1; i <= Model.PageCount; i++)
+                        
+                        
+                        <ul class="pagination">
+                            @for (int i = 1; i <= Model.PageCount; i++)
+                            {
+                                    
+                                if (i != Model.CurrentPageIndex)
                                 {
-                                    <td class="td-padding">
-                                        @if (i != Model.CurrentPageIndex)
-                                        {
-                                            <a href="javascript:PagerClick(@i);">@i</a>
-                                        }
-                                        else
-                                        {
-                                            <span>@i</span>
-                                        }
-                                    </td>
+                                    <li>
+                                        <a href="javascript:PagerClick(@i);">@i</a>
+                                    </li>
                                 }
-                            </tr>
-                        </table>
-                        <input type="hidden" id="hfCurrentPageIndex" name="currentPageIndex" />
+                                else
+                                {
+                                    <li class="active">
+                                        <a href="javascript:PagerClick(@i);">@i</a>
+                                    </li>
+                                }
+                            }
+
+                        </ul>
+                        <input type="hidden" id="hfCurrentPageIndex" name="currentPageIndex"/>
                     </div>
                     <div class="col-md-1">
                         <input type="button" class="btn btn-block btn-primary btn-sm" value="Back" onclick="location.href='@Url.Action("Index", "MasterCampaign")'" style="width: 180% !important;height: 40px;margin-left: -85%;" />
