--- a/MRM/Views/MasterCampaign/MasterCampaignForm.cshtml
+++ b/MRM/Views/MasterCampaign/MasterCampaignForm.cshtml
@@ -168,39 +168,41 @@
                 </fieldset>
             </div>
             <!--Upper code /.col -->
-            <fieldset>
-                <div class="row" style="padding-top: 10px">
-                    @if (Model.Status == "")
-                    {
-                        <div class="col-md-2">
-                            <input type="button" class="btn btn-block btn-primary btn-sm" value="Back" onclick="location.href = '@Url.Action("Index", "MasterCampaign")'"/>
-                        </div>
-                    }
-                    else
-                    {
-                        <div class="col-md-2">
-                            <input type="button" class="btn btn-block btn-primary btn-sm" value="Back" onclick="location.href = '@Url.Action("MasterList", "MasterList")'"/>
-                        </div>
-                    }
-                    <div class="col-md-6"></div>
-                    <div class="col-md-4">
-                        @if (Model.Status != "Complete")
-                        {
-                            <div class="col-md-4">
-                                <input type="button" Id="btnSubmit" name="button" value="Submit" class="btn btn-block btn-primary btn-sm"/>
-                            </div>
-                            <div class="col-md-4">
-                                <input type="button" Id="btnSaveDraft" name="button" value="Save Draft" class="btn btn-block btn-primary btn-sm"/>
-                            </div>
-                        }
-                        @if (Model.Id != 0 && Model.Status == "Save Draft")
-                        {
-                            <div class="col-md-4">
-                                <input type="button" Id="btnDelete" name="button" value="Delete Draft" class="btn btn-block btn-danger btn-sm" onclick="return confirm('Are you sure you want to delete?')"/>
-                            </div>
-                        }
-                    </div>
+            <fieldset>                
+               <div class="form-group">
+                    <div class="row " style="padding-top: 10px">
+                        <div class="col-md-4"></div>
+                        <div class="col-md-8">                                
+                            @if (Model.Status == "")
+                            {
+                                <div class="col-md-3">
+                                    <input type="button" class="btn btn-block btn-primary col-sm-12" value="Back" onclick="location.href = '@Url.Action("Index", "MasterCampaign")'" />
+                                </div>
+                            }
+                            else
+                            {
+                                <div class="col-md-3">
+                                    <input type="button" class="btn btn-block btn-primary col-sm-12" value="Back" onclick="location.href = '@Url.Action("MasterList", "MasterList")'" />
+                                </div>
+                            }
 
+                            @if (Model.Status != "Complete")
+                            {
+                                <div class="col-md-4">
+                                    <input type="button" Id="btnSubmit" name="button" value="Submit" class="btn btn-block btn-primary col-sm-12"/>
+                                </div>
+                                <div class="col-md-4">
+                                    <input type="button" Id="btnSaveDraft" name="button" value="Save Draft" class="btn btn-block btn-primary col-sm-12"/>
+                                </div>
+                            }
+                            @if (Model.Id != 0 && Model.Status == "Save Draft")
+                            {
+                                <div class="col-md-4">
+                                    <input type="button" Id="btnDelete" name="button" value="Delete Draft" class="btn btn-block btn-primary col-sm-12" onclick="return confirm('Are you sure you want to delete?')"/>
+                                </div>
+                            }
+                        </div>
+                    </div>
                 </div>
             </fieldset>
         </div>
