--- a/MRM/Views/Shared/_Layout.cshtml
+++ b/MRM/Views/Shared/_Layout.cshtml
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - MRM Campaign</title>
     
-    <script type="text/javascript" src="http://code.jquery.com/jquery-1.9.1.js"></script>
-    <script type="text/javascript" src="http://code.jquery.com/ui/1.10.1/jquery-ui.js"></script>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-1.9.1.js"></script>
+    <script type="text/javascript" src="https://code.jquery.com/ui/1.10.1/jquery-ui.js"></script>
     
     <link href="~/Content/datepicker3.css" rel="stylesheet"/>
     <script src="~/Content/bootstrap-datepicker.js"></script>
@@ -108,6 +108,14 @@
                 startDate: new Date($('#StartDate').val()),
                 formatDate: 'mm/dd/yyyy'
             });
+        }
+
+        if ($("#EndDate").val().length>0) {
+            $("#EndDate").val($("#EndDate").val().substr(0, $("#EndDate").val().indexOf(" ")));
+        }
+
+        if ($("#StartDate").val().length > 0) {
+            $("#StartDate").val($("#StartDate").val().substr(0, $("#StartDate").val().indexOf(" ")));
         }
     };
 
