--- a/MRM/Views/TacticList/TacticList.cshtml
+++ b/MRM/Views/TacticList/TacticList.cshtml
@@ -49,56 +49,62 @@
                 <div class="table-responsive">
                     <table cellpadding="0" cellspacing="0" class="table table-bordered">
                         <thead class="header-background-color">
-                            <tr>
-                                <th>Tactic Campaign ID</th>
-                                <th>Name</th>
-                                <th style="width:30%">Tactic Campaign Description</th>
-                                <th>Status</th>
-                                <th style="width:10%;">Start Date</th>
-                                <th style="width:10%;">End Date</th>
-                                <th style="width:16%;">Action</th>
-                            </tr>
+                        <tr>
+                            <th>Tactic Campaign ID</th>
+                            <th>Name</th>
+                            <th style="width:30%">Tactic Campaign Description</th>
+                            <th>Status</th>
+                            <th style="width:10%;">Start Date</th>
+                            <th style="width:10%;">End Date</th>
+                            <th style="width:16%;">Action</th>
+                        </tr>
                         </thead>
                         @foreach (var item in Model.TacticCampaigns)
-                {
+                        {
                             <tbody>
-                                <tr>
-                                    <td>T-@item.Id.ToString("0000000")</td>
-                                    <td>@item.Name</td>
-                                    <td>@item.TacticDescription</td>
-                                    <td>@item.Status</td>
-                                    <td>@item.StartDate.Value.ToString("dd-MM-yyyy")</td>
-                                    <td>@item.EndDate.Value.ToString("dd-MM-yyyy")</td>
-                                    <td>
-                                        <input type="button" class="btn btn-block btn-primary btn-sm btn-edit" value="Edit" onclick="location.href='@Url.Action( "TacticCampaign", "TacticCampaign", new { Id = item.Id })'" />
-                                        <input type="button" class="btn btn-block btn-primary btn-sm btn-view" value="View" onclick="location.href='@Url.Action( "TacticList", "TacticList", new { Id = item.Id, @Type="View" })'" />
-                                        <input type="button" class="btn btn-block btn-primary btn-sm btn-delete" value="Delete" onclick="if (confirm('Are you sure you want to delete?')) location.href='@Url.Action( "TacticList", "TacticList", new { Id = item.Id, @Type = "Delete" })'" />
-                                    </td>
-                                </tr>
+                            <tr>
+                                <td>T-@item.Id.ToString("0000000")</td>
+                                <td>@Html.ActionLink((item.Name==null?"----":item.Name), "TacticCampaign", "TacticCampaign", new { Id = item.Id }, null)</td>
+                                <td>@item.TacticDescription</td>
+                                <td>@item.Status</td>
+                                <td>@item.StartDate.Value.ToString("dd-MM-yyyy")</td>
+                                <td>@item.EndDate.Value.ToString("dd-MM-yyyy")</td>
+                                <td>
+                                    @Html.ActionLink("View / Edit", "TacticCampaign", "TacticCampaign", new { id = item.Id}, new { })
+                                    @if (item.Status != "Complete")
+                                    {
+                                        <input type="button" class="btn btn-block btn-primary btn-sm btn-delete" value="Delete" onclick="if (confirm('Are you sure you want to delete?')) location.href = '@Url.Action("TacticListById", "TacticList", new {Id = item.Id, @Type = "Delete"})'" />
+                                    }
+                                </td>
+                            </tr>
                             </tbody>
                         }
                     </table>
                 </div>
-
                 <div class="row" style="padding-top:10px">
-                    <div class="col-md-11">
-                        <table cellpadding="0" cellspacing="0">
-                            <tr>
-                                @for (int i = 1; i <= Model.PageCount; i++)
+                    <div class="col-md-11">                                               
+                        <ul class="pagination">
+                            @for (int i = 1; i <= Model.PageCount; i++)
+                            {
+                                    
+                                if (i != Model.CurrentPageIndex)
                                 {
-                                    <td class="td-padding">
-                                        @if (i != Model.CurrentPageIndex)
-                                        {
-                                            <a href="javascript:PagerClick(@i);">@i</a>
-                                        }
-                                        else
-                                        {
-                                            <span>@i</span>
-                                        }
-                                    </td>
+                                    <li>
+                                        <a href="javascript:PagerClick(@i);">@i</a>
+                                    </li>
                                 }
-                            </tr>
-                        </table>
+                                else
+                                {
+                                    <li class="active">
+                                        <a href="javascript:PagerClick(@i);">@i</a>
+                                    </li>
+                                }
+                            }
+
+                        </ul>
+                        
+                        
+
                         <input type="hidden" id="hfCurrentPageIndex" name="currentPageIndex" />
                     </div>
                     <div class="col-md-1">
